objects/ExpenseMemberAssociation__c.object
<CustomObject>
    <fields>
        <fullName>ContributionAmount__c</fullName>
        <label>ContributionAmount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpenseID__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense</relationshipLabel>
        <relationshipName>ExpenseMemberAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Member</relationshipLabel>
        <relationshipName>ExpenseMemberAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ExpenseMemberAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{000}</displayFormat>
        <label>EventMemberAssociation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExpenseMemberAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>